Changed wasm JS call.

--- a/pages/rust_projects.html
+++ b/pages/rust_projects.html
@@ -60,7 +60,7 @@
 
   <script type="module">
     import init from '../games/space-shooter-files/space_shooter.js';
-    async init() 
+    init() 
   </script>
 </body>
 </html>
