Trying to get syntax right for assets to load before game starts

--- a/pages/rust_projects.html
+++ b/pages/rust_projects.html
@@ -60,7 +60,8 @@
 
   <script type="module">
     import init from '../games/space-shooter-files/space_shooter.js';
-    init() 
+    var in = async init();
+    in.start();
   </script>
 </body>
 </html>
