--- a/pages/rust_projects.html
+++ b/pages/rust_projects.html
@@ -60,8 +60,8 @@
 
   <script type="module">
     import init from '../games/space-shooter-files/space_shooter.js';
-    var in = async init();
-    in.start();
+    var i = async init();
+    i.start();
   </script>
 </body>
 </html>
