--- a/pages/rust_projects.html
+++ b/pages/rust_projects.html
@@ -60,7 +60,8 @@
 
   <script type="module">
     import init from '../games/space-shooter-files/space_shooter.js';
-    var i = async init();
+    var i;
+    i = async init();
     i.start();
   </script>
 </body>
