--- a/pages/rust_projects.html
+++ b/pages/rust_projects.html
@@ -60,8 +60,7 @@
 
   <script type="module">
     import init from '../games/space-shooter-files/space_shooter.js';
-    var i;
-    i = async init();
+    const i = async init();
     i.start();
   </script>
 </body>
