Trying to get syntax right for assets to load before game starts

--- a/pages/rust_projects.html
+++ b/pages/rust_projects.html
@@ -60,8 +60,7 @@
 
   <script type="module">
     import init from '../games/space-shooter-files/space_shooter.js';
-    const i = async init();
-    i.start();
+    async init().start();
   </script>
 </body>
 </html>
