--- a/pages/rust_projects.html
+++ b/pages/rust_projects.html
@@ -60,7 +60,12 @@
 
   <script type="module">
     import init from '../games/space-shooter-files/space_shooter.js';
-    async init().start();
+    function async runGame() {
+    	var game = async init();
+	game.start();
+    }
+
+    runGame();
   </script>
 </body>
 </html>
