Figuring out how to get assets to load before game tries to call them

--- a/pages/rust_projects.html
+++ b/pages/rust_projects.html
@@ -60,7 +60,7 @@
 
   <script type="module">
     import init from '../games/space-shooter-files/space_shooter.js';
-    function async runGame() {
+    async function runGame() {
     	var game = async init();
 	game.start();
     }
