Figuring out how to get assets to load before game tries to call them

--- a/pages/rust_projects.html
+++ b/pages/rust_projects.html
@@ -61,7 +61,7 @@
   <script type="module">
     import init from '../games/space-shooter-files/space_shooter.js';
     async function runGame() {
-    	var game = async init();
+    	var game = await init();
 	game.start();
     }
 
